docs: move pipes to concepts

--- a/docs/content/_apidocs.mdx
+++ b/docs/content/_apidocs.mdx
@@ -209,7 +209,7 @@ APIs from the core `dagster` package, divided roughly by topic:
       </td>
       <td>
         APIs for working with the{" "}
-        <a href="/guides/dagster-pipes">Dagster Pipes protocol</a> from the
+        <a href="/concepts/dagster-pipes">Dagster Pipes protocol</a> from the
         orchestration side.
       </td>
     </tr>
