--- a/docs/content/concepts/dagster-pipes/kubernetes.mdx
+++ b/docs/content/concepts/dagster-pipes/kubernetes.mdx
@@ -8,7 +8,7 @@ description: "Learn to integrate Dagster Pipes with Kubernetes to launch externa
 <Note>
   <strong>Heads up!</strong> This guide focuses on using an out-of-the-box
   Kubernetes resource. For further customization, use the{" "}
-  <a href="/guides/dagster-pipes/dagster-pipes-details-and-customization">
+  <a href="/concepts/dagster-pipes/dagster-pipes-details-and-customization">
     <code>open_pipes_session</code> approach
   </a>{" "}
   instead.
@@ -224,10 +224,10 @@ In this step, you’ll run the Kubernetes container you defined in [Step 1](#ste
 3. Click **Materialize** near the top right corner of the page, then click **View** on the **Launched Run** popup. Wait for the run to complete, and the event log should look like this:
 
    <Image
-   alt="Event log for Kubernetes run"
-   src="/images/guides/dagster-pipes/kubernetes/run.png"
-   width={1784}
-   height={1495}
+     alt="Event log for Kubernetes run"
+     src="/images/guides/dagster-pipes/kubernetes/run.png"
+     width={1784}
+     height={1495}
    />
 
 ---
@@ -237,11 +237,11 @@ In this step, you’ll run the Kubernetes container you defined in [Step 1](#ste
 <ArticleList>
   <ArticleListItem
     title="Dagster Pipes"
-    href="/guides/dagster-pipes"
+    href="/concepts/dagster-pipes"
   ></ArticleListItem>
   <ArticleListItem
     title="Dagster Pipes details and customization"
-    href="/guides/dagster-pipes/dagster-pipes-details-and-customization"
+    href="/concepts/dagster-pipes/dagster-pipes-details-and-customization"
   ></ArticleListItem>
   <ArticleListItem
     title="dagster-k8s API reference"
