--- a/docs/content/concepts/dagster-pipes/databricks.mdx
+++ b/docs/content/concepts/dagster-pipes/databricks.mdx
@@ -132,7 +132,7 @@ Let's review what's happening in this code:
 
 ### Step 1.2: Define the Databricks Pipes client and definitions
 
-The [`dagster-databricks`](/\_apidocs/libraries/dagster-databricks) library provides a <PyObject module="dagster_databricks" object="PipesDatabricksClient" />, which is a pre-built Dagster resource that allows you to quickly get Pipes working with your Databricks workspace.
+The [`dagster-databricks`](/_apidocs/libraries/dagster-databricks) library provides a <PyObject module="dagster_databricks" object="PipesDatabricksClient" />, which is a pre-built Dagster resource that allows you to quickly get Pipes working with your Databricks workspace.
 
 Add the following to the bottom of `dagster_databricks_pipes.py` to define the resource and a <PyObject object="Definitions" /> object that binds it to the `databricks_asset`:
 
@@ -263,19 +263,19 @@ In this step, you’ll run the Databricks job you created in [Step 1.2](#step-12
 2. Navigate to [localhost:3000](http://localhost:3000/), where you should see the UI:
 
    <Image
-   alt="Databricks asset"
-   src="/images/guides/dagster-pipes/databricks/asset.png"
-   width={2554}
-   height={1335}
+     alt="Databricks asset"
+     src="/images/guides/dagster-pipes/databricks/asset.png"
+     width={2554}
+     height={1335}
    />
 
 3. Click **Materialize** near the top right corner of the page, then click **View** on the **Launched Run** popup. Wait for the run to complete, and the event log should look like this:
 
    <Image
-   alt="Event log for Databricks run"
-   src="/images/guides/dagster-pipes/databricks/run.png"
-   width={2554}
-   height={1335}
+     alt="Event log for Databricks run"
+     src="/images/guides/dagster-pipes/databricks/run.png"
+     width={2554}
+     height={1335}
    />
 
 ---
@@ -378,11 +378,11 @@ def databricks_asset(context: AssetExecutionContext):
 <ArticleList>
   <ArticleListItem
     title="Dagster Pipes"
-    href="/guides/dagster-pipes"
+    href="/concepts/dagster-pipes"
   ></ArticleListItem>
   <ArticleListItem
     title="Dagster Pipes details and customization"
-    href="/guides/dagster-pipes/dagster-pipes-details-and-customization"
+    href="/concepts/dagster-pipes/dagster-pipes-details-and-customization"
   ></ArticleListItem>
   <ArticleListItem
     title="dagster-databricks API reference"
