--- a/docs/content/concepts/dagster-pipes/aws-lambda.mdx
+++ b/docs/content/concepts/dagster-pipes/aws-lambda.mdx
@@ -14,7 +14,7 @@ description: "Learn to integrate Dagster Pipes with AWS Lambda to launch externa
   instead.
 </Note>
 
-In this guide, we’ll show you how to use [Dagster Pipes](/guides/dagster-pipes) with Dagster’s AWS Lambda integration to invoke a Lambda function and execute external code.
+In this guide, we’ll show you how to use [Dagster Pipes](/concepts/dagster-pipes) with Dagster’s AWS Lambda integration to invoke a Lambda function and execute external code.
 
 Pipes allows your code to interact with Dagster outside of a full Dagster environment. Instead, the environment only needs to contain `dagster-pipes`, a single-file Python package with no dependencies that can be installed from PyPI or easily vendored. `dagster-pipes` handles streaming `stdout`/`stderr` and Dagster events back to the orchestration process.
 
@@ -64,10 +64,10 @@ For simplicity we're demonstrating this step using the UI, but you can also do t
 After the function is created, you'll be redirected to a page like the following:
 
 <Image
-alt="The Lambda function details page in the AWS UI"
-src="/images/guides/dagster-pipes/aws-lambda/aws-lambda-function-details.png"
-width={1920}
-height={1153}
+  alt="The Lambda function details page in the AWS UI"
+  src="/images/guides/dagster-pipes/aws-lambda/aws-lambda-function-details.png"
+  width={1920}
+  height={1153}
 />
 
 ### Step 1.2: Add a dagster-pipes file
@@ -86,10 +86,10 @@ Next, you'll add `dagster-pipes` to the function.
 1. In the **Code source** section of the page, add a new file. This can be accomplished with **File > New file** or by clicking the green **+** icon next to the open `lambda_function` tab:
 
    <Image
-   alt="Highlighted New file option in a menu of the Code source section on the Lambda function details page"
-   src="/images/guides/dagster-pipes/aws-lambda/aws-lambda-create-new-file.png"
-   width={2386}
-   height={1196}
+     alt="Highlighted New file option in a menu of the Code source section on the Lambda function details page"
+     src="/images/guides/dagster-pipes/aws-lambda/aws-lambda-create-new-file.png"
+     width={2386}
+     height={1196}
    />
 
 2. **In a new browser tab**, navigate to the following URL:
@@ -101,10 +101,10 @@ Next, you'll add `dagster-pipes` to the function.
 3. Copy the contents of `__init__.py` into the new file you created in AWS. **Note**: We recommend adding the source link and the date you copied the contents to the top of the file as comments:
 
    <Image
-   alt="The copied contents of the Dagster Pipes file into a file in the AWS UI"
-   src="/images/guides/dagster-pipes/aws-lambda/aws-lambda-add-dagster-pipes.png"
-   width={2390}
-   height={1090}
+     alt="The copied contents of the Dagster Pipes file into a file in the AWS UI"
+     src="/images/guides/dagster-pipes/aws-lambda/aws-lambda-add-dagster-pipes.png"
+     width={2390}
+     height={1090}
    />
 
 4. Save the file as `dagster_pipes.py`.
@@ -154,7 +154,7 @@ Let's review what this code does:
 
   We're using the default context loader (<PyObject object="PipesDefaultContextLoader" module="dagster_pipes" />) and message writer (<PyObject object="PipesDefaultMessageWriter" module="dagster_pipes" />) in this example. These objects establish communication between the orchestration and external process. On the orchestration end, these match a corresponding `PipesLambdaEventContextInjector` and `PipesLambdaLogsMessageReader`, which are instantiated inside the <PyObject module="dagster_aws.pipes" object="PipesLambdaClient" />.
 
-- **Inside the body of the context manager (<PyObject object="open_dagster_pipes" module="dagster_pipes" />), retrieve a log and report an asset materialization.** These calls use the temporary communications channels established by <PyObject object="PipesDefaultContextLoader" module="dagster_pipes" /> and <PyObject object="PipesDefaultMessageWriter" module="dagster_pipes" />. To see the full range of what you can do with the <PyObject object="PipesContext" module="dagster_pipes" />, see the API docs or the general [Pipes documentation](/guides/dagster-pipes).
+- **Inside the body of the context manager (<PyObject object="open_dagster_pipes" module="dagster_pipes" />), retrieve a log and report an asset materialization.** These calls use the temporary communications channels established by <PyObject object="PipesDefaultContextLoader" module="dagster_pipes" /> and <PyObject object="PipesDefaultMessageWriter" module="dagster_pipes" />. To see the full range of what you can do with the <PyObject object="PipesContext" module="dagster_pipes" />, see the API docs or the general [Pipes documentation](/concepts/dagster-pipes).
 
 At this point you can execute the rest of your AWS Lambda code as normal, invoking various <PyObject object="PipesContext" module="dagster_pipes" /> APIs as needed.
 
@@ -244,10 +244,10 @@ In this step, you’ll invoke the AWS Lambda function you defined in [Step 1](#s
    <!-- ![Event log for AWS Lambda run](/images/guides/dagster-pipes/aws-lambda/aws-lambda-dagster-ui.png) -->
 
    <Image
-   alt="Event log for AWS Lambda run"
-   src="/images/guides/dagster-pipes/aws-lambda/aws-lambda-dagster-ui.png"
-   width={1501}
-   height={1416}
+     alt="Event log for AWS Lambda run"
+     src="/images/guides/dagster-pipes/aws-lambda/aws-lambda-dagster-ui.png"
+     width={1501}
+     height={1416}
    />
 
 ---
