[insights][docs] add brief insights alert docs (#21038)
## Summary
Adds brief Insights alerting docs which lay out what can be alerted on
and provides some examples of use-cases.





<img width="731" alt="Screenshot 2024-04-04 at 3 12 42 PM"
src="https://github.com/dagster-io/dagster/assets/10215173/ba6e3d26-e7b7-4a60-8fe2-91217aab67f8">

## Test Plan

Local docs.

--- a/docs/content/dagster-cloud/managing-deployments/alerts.mdx
+++ b/docs/content/dagster-cloud/managing-deployments/alerts.mdx
@@ -102,6 +102,35 @@ Alert policies are configured on a **per-deployment basis**. This means, for exa
         <a href="/dagster-cloud/deployment/hybrid">Hybrid deployments</a> only.
       </td>
     </tr>
+    <tr>
+      <td>
+        <strong>Insights metric alert</strong> <Experimental />
+      </td>
+      <td>
+        <strong>
+          A Dagster Cloud Pro plan is required to use this feature.
+        </strong>
+        <br />
+        Sends a notification when a{" "}
+        <a href="/dagster-cloud/insights">Dagster Cloud Insights</a> metric
+        exceeds or falls below a specified threshold over a specified time
+        window. This can be used to alert on:
+        <ul>
+          <li>
+            Dagster credit usage across a deployment or for a specific job
+          </li>
+          <li>Performance regressions on asset or job runtime</li>
+          <li>Spend on external tools such as Snowflake or BigQuery credits</li>
+        </ul>
+        Alerts can be scoped to the sum of any metric across an entire
+        deployment, or for a specific job, asset group, or asset key.
+        <br />
+        <strong>Note</strong>: Alerts are sent only when the threshold is first
+        crossed, and will not be sent again until the value returns to expected
+        levels. Insights data may become available up to 24 hours after run
+        completion.
+      </td>
+    </tr>
   </tbody>
 </table>
 
